system/css/jquery.pgrid.default.css
/* 
	Document   : jquery.pgrid.default.css
	Created on : Sep 25, 2009, 1:40:10 PM
	Author	 : Hunter Perrin
	Description:
		Default styling for Pines Grid jQuery plugin.
*/

/* Grid container
----------------------------------*/
.ui-pgrid {
	padding: 0.2em;
}

/* Table container
----------------------------------*/
.ui-pgrid-table-container {
	overflow: auto;
}

/* Header selector
----------------------------------*/
.ui-pgrid .ui-pgrid-header-select {
	float: left;
	position: absolute;
	display: none;
	padding: 3px;
}
.ui-pgrid .ui-pgrid-header-select label {
	display: block;
	margin-top: 2px;
	padding: 0 2px;
}
.ui-pgrid .ui-pgrid-header-select label input {
	margin-right: 3px;
}

/* Toolbar
----------------------------------*/
.ui-pgrid-toolbar {
	padding: 1px;
	margin: 0;
	font-weight: normal;
}
.ui-pgrid-toolbar .ui-pgrid-toolbar-sep {
	float: left;
	height: 1em;
	width: 0;
	padding: 5px 0;
	margin: 1px 2px;
}
.ui-pgrid-toolbar .ui-pgrid-toolbar-button {
	float: left;
	cursor: default;
	padding: 3px;
	margin: 1px;
}
.ui-pgrid-toolbar .ui-pgrid-toolbar-button div {
	padding: 1px;
}

/* Footer
----------------------------------*/
.ui-pgrid-footer {
	padding: 3px;
}
.ui-pgrid-footer .ui-pgrid-footer-filter-container {
	display: inline;
	margin-left: 5px;
	font-weight: normal;
}
.ui-pgrid-footer .ui-pgrid-footer-filter-container button {
	padding: 0 1px;
	margin: 0;
}
.ui-pgrid-footer .ui-pgrid-footer-pager-container {
	display: inline;
	margin-left: 5px;
	font-weight: normal;
}
.ui-pgrid-footer button, .ui-pgrid-footer input {
	padding: 1px;
	margin: 0;
}
.ui-pgrid-footer .ui-pgrid-footer-pager-button-container {
	display: inline;
}
.ui-pgrid-footer .ui-pgrid-footer-count-container {
	float: right;
	margin-left: 5px;
	margin-top: 3px;
	font-weight: normal;
}

/* Grid Itself
----------------------------------*/
.ui-pgrid-table {
	white-space: nowrap;
	padding: 0;
	border-spacing: 0;
	min-width: 100%;
}
.ui-pgrid-table .ui-pgrid-table-sized-cell {
	width: 1px; /* Allows cell resizing less than its content's width. */
	white-space: nowrap;
}
.ui-pgrid-table tbody {
	overflow: auto;
}
.ui-pgrid-table tr {
	overflow: hidden;
	height: 1em;
}
.ui-pgrid-table thead tr {
	position: relative;
}
.ui-pgrid-table thead th {
	border-width: 0 1px 1px 0;
	border-style: solid;
	vertical-align: middle;
	text-align: left;
	font-weight: normal;
	overflow: hidden;
	height: 100%;
	padding: 0;
	cursor: pointer;
}
.ui-pgrid-table thead th .ui-icon {
	float: right;
	visibility: hidden;
}
.ui-pgrid-table thead th.ui-pgrid-table-expander .ui-icon {
	float: none;
	visibility: visible;
}
.ui-pgrid-table thead th .ui-icon.ui-pgrid-table-header-sorted-desc {
	visibility: visible;
}
.ui-pgrid-table thead th .ui-icon.ui-pgrid-table-header-sorted-asc {
	visibility: visible;
}
.ui-pgrid-table thead th .ui-pgrid-table-header-text {
	float: left;
	padding: 0 2px;
}
.ui-pgrid-table thead th .ui-pgrid-table-header-sizehandle {
	border-width: 0;
	white-space: normal;
	cursor: e-resize;
	float: right;
	width: 3px;
	height: 100%;
	overflow: hidden;
}
.ui-pgrid-table thead th .ui-pgrid-table-header-sizer {
	min-width: 6px;
}
.ui-pgrid-table tbody tr.ui-pgrid-table-row-hidden {
	display: none;
}
.ui-pgrid-table tbody tr.ui-pgrid-table-row-spacer {
	visibility: hidden;
	height: auto;
}
.ui-pgrid-table tbody tr td.ui-pgrid-table-cell-sorted {
	font-style: italic;
}
.ui-pgrid-table tbody td, .ui-pgrid-table tbody td.ui-state-highlight, .ui-pgrid-table tbody td.ui-state-default, .ui-pgrid-table tbody td.ui-state-hover {
	border-width: 0 1px 1px 0;
	border-style: solid;
	padding: 2px;
	overflow: hidden;
	text-align: left;
}
.ui-pgrid-table tbody td.ui-pgrid-table-expander, .ui-pgrid-table thead th.ui-pgrid-table-expander, .ui-pgrid-table .ui-pgrid-table-cell-scrollspace {
	width: 16px;
	height: 16px;
	padding: 0;
}
.ui-pgrid-table thead .ui-pgrid-table-cell-scrollspace {
	width: 100%;
	min-width: 19px;
}
.ui-pgrid-table tbody .ui-pgrid-table-cell-scrollspace {
	visibility: hidden;
}

